# django_htmx_ui_adminlte

./: README.md  pyproject.toml
src/django_adminlte_ui/: apps.py  forms.py  urls.py  utils.py  widgets.py
src/django_adminlte_ui/jinja2/django_adminlte_ui/dashboard/: dashboard.html
src/django_adminlte_ui/jinja2/django_adminlte_ui/errors/: 404.html
src/django_adminlte_ui/jinja2/django_adminlte_ui/macros/: components.html
src/django_adminlte_ui/jinja2/django_adminlte_ui/panel/: menu.html  panel_origin.html
src/django_adminlte_ui/jinja2/django_adminlte_ui/welcome/: login.html  signup.html
src/django_adminlte_ui/templates/django_adminlte_ui/errors/: 404.html  500.html
src/django_adminlte_ui/templates/django_adminlte_ui/helpers/: alert.html  callout.html  card_tabs.html  card_tabs_htmx.html  card_tabs_preload_htmx.html  empty.html  empty_create.html  empty_small.html  info_box.html  modal.html  modal_form.html  panel_teleports.html
src/django_adminlte_ui/templates/django_adminlte_ui/panel/: header_left.html  header_right.html  logo.html  menu.html  panel.html  title.html
src/django_adminlte_ui/templates/django_adminlte_ui/welcome/: login.html  logo.html  signup.html  welcome.html
src/django_adminlte_ui/views/: dashboard.py  errors.py  panel.py  users.py  welcome.py
src/django_htmx_ui_adminlte/: apps.py  fields.py  urls.py  widgets.py
src/django_htmx_ui_adminlte/jinja2/django/forms/: div.html
src/django_htmx_ui_adminlte/static/css/: style.css
src/django_htmx_ui_adminlte/views/: dashboard.py  errors.py  panel.py  users.py  welcome.py
(+36 files in other folders)
