[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_htmx_ui_adminlte"
version = "0.1.5"
authors = [
  { name="Nikalexis Nikolaos", email="nikalexis@gmail.com" },
]
description = "AdminLTE - Django - HTMX - Jinja powerful combination library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'Django >= 4.1.0',
    'django_htmx_ui >= 0.1.3',
]

[project.urls]
"Homepage" = "https://github.com/nikalexis/django_htmx_ui_adminlte"
"Bug Tracker" = "https://github.com/nikalexis/django_htmx_ui_adminlte/issues"

